[package]
name = "aor2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"

[lib]
name = "cpu"
path = "src/cpu/lib.rs"

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
