[package]
name = "aor2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
ndarray = "0.15"
aoc = { path = "../../aoc" }
regex = "1"

[lib]
name = "cpu"
path = "src/cpu/lib.rs"

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day12"
